--- a/lib/SConscript
+++ b/lib/SConscript
@@ -4,7 +4,7 @@ Import('env')
 
 target = 'physics_engine'
 source = (
-    'integrator.c',
+    'src/integrator.c',
 )
 
 if platform.system().lower() == 'darwin':
