Create debug/release debug.h header file
This allows things like only asserting in debug builds.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -7,6 +7,12 @@ source = (
     'src/integrator.c',
 )
 
+env.Append(
+    CPPPATH = [
+        'src/$MODE',
+    ],
+)
+
 if platform.system().lower() == 'darwin':
     lib = env.SharedLibrary(target, source)
 else:
