Collect code coverage of unit test execution and generate HTML report

--- a/test/unit/SConscript
+++ b/test/unit/SConscript
@@ -18,4 +18,18 @@ source = (
 
 log = env.BuildAndRunUnitTests(target, source)
 
-Return('log')
+coverage_source = (
+    log,
+    source,
+)
+
+coverage = env.GenerateCodeCoverageReport(
+    target = 'coverage',
+    source = coverage_source,
+    data_dir = '$BUILD_DIR/lib/src',
+    title = 'physics-engine',
+)
+
+env.Clean(log, coverage)
+
+Return('log coverage')
