Add remainder of unit tests

--- a/test/unit/SConscript
+++ b/test/unit/SConscript
@@ -14,6 +14,10 @@ target = 'unit_test.log'
 source = (
     'src/main.c',
     'src/test_pe_init.c',
+    'src/test_pe_fini.c',
+    'src/test_pe_add_body.c',
+    'src/test_pe_add_force.c',
+    'src/test_pe_loop.c',
 )
 
 log = env.BuildAndRunUnitTests(target, source)
